--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <style>
       body {
         font-family: Arial, sans-serif;
-        background-image: url("https://imgs.search.brave.com/oPsb9hFEq8YKMSsz7ReOroU3L3R98uLY0ey7CrXB0a8/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9lMC5w/eGZ1ZWwuY29tL3dh/bGxwYXBlcnMvMzc5/LzQyMS9kZXNrdG9w/LXdhbGxwYXBlci1t/aW5lY3JhZnQtZGly/dC10ZXh0dXJlLXRo/dW1ibmFpbC5qcGc");
-        background-size: cover;
-        color: #8b4513; /* Dirt brown */
+        background-color: #222;
         text-align: center;
         padding: 50px;
       }
