--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <body>
     <div>
       <div class="donation-info">
-        Donated amount of money to CitricNodes in this session: $<span
+        Donated amount of money to PistonCloud in this session: $<span
           id="donation-amount"
           >0.0000000000</span
         >
